--- a/index.html
+++ b/index.html
@@ -4,99 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAPERHOUSE INC</title>
+    <!-- Monetag SDKs -->
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
     <script src='//libtl.com/sdk.js' data-zone='10337795' data-sdk='show_10337795'></script>
     <script src='//libtl.com/sdk.js' data-zone='10337853' data-sdk='show_10337853'></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
     <style>
-        :root { --green: #2ecc71; --white-glow: rgba(255,255,255,0.2); --dark: #0a0a0a; }
-        body { font-family: 'Segoe UI', sans-serif; background: white; color: black; margin: 0; padding: 10px; transition: background 0.5s; padding-bottom: 120px; }
-        body.clicked { background: #0088cc !important; color: white; }
+        :root { --green: #2ecc71; --gold: #ffd700; --blue: #0088cc; }
+        body { font-family: 'Segoe UI', sans-serif; background: white; color: black; margin: 0; padding: 10px; transition: 0.5s; padding-bottom: 110px; }
+        body.active-bg { background: var(--blue) !important; color: white; }
         
-        .card { background: #f9f9f9; padding: 15px; border-radius: 12px; margin-bottom: 10px; border: 1px solid #ddd; color: black; }
-        body.clicked .card { background: rgba(0,0,0,0.2); color: white; border: 1px solid #555; }
-
-        /* BUTTONS */
+        /* Buttons */
         button { 
-            width: 100%; padding: 14px; margin: 5px 0; border: none; border-radius: 8px; 
+            width: 100%; padding: 14px; margin: 5px 0; border: none; border-radius: 10px; 
             font-weight: bold; cursor: pointer; background: var(--green); color: white;
-            box-shadow: inset 0 0 5px var(--white-glow); transition: 0.3s;
+            border-bottom: 3px solid rgba(0,0,0,0.2); transition: 0.2s;
         }
         button:active { transform: scale(0.98); }
-        .rainbow-btn { background: #ffd700; color: black; }
-        .rainbow-btn:active { animation: rainbow 0.5s infinite; color: white; }
+        .rainbow-btn { background: var(--gold); color: black; }
+        .rainbow-btn:active { animation: rainbow 0.4s infinite; color: white; }
         
         @keyframes rainbow {
-            0% { background: red; } 20% { background: orange; } 40% { background: yellow; }
-            60% { background: green; } 80% { background: blue; } 100% { background: purple; }
+            0% {background: red;} 20% {background: orange;} 40% {background: yellow;}
+            60% {background: green;} 80% {background: blue;} 100% {background: purple;}
         }
 
-        /* HEADER */
-        .header { text-align: center; padding: 15px; border-bottom: 3px solid #ffd700; margin-bottom: 10px; }
-        .balance-main { font-size: 2.2rem; color: var(--green); font-weight: bold; }
+        .card { background: rgba(255,255,255,0.9); padding: 15px; border-radius: 15px; margin-bottom: 10px; color: black; border: 1px solid #ddd; }
+        body.active-bg .card { background: rgba(0,0,0,0.3); color: white; border: 1px solid rgba(255,255,255,0.1); }
 
-        /* TABLES */
-        table { width: 100%; font-size: 10px; border-collapse: collapse; margin-top: 10px; background: white; color: black; }
-        body.clicked table { background: #111; color: white; }
+        /* Tables & Lists */
+        table { width: 100%; font-size: 10px; border-collapse: collapse; margin-top: 10px; }
         th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
-        .status-Paid { color: #2ecc71; font-weight: bold; }
-        .status-Pending { color: #f1c40f; }
+        .status-Paid { color: var(--green); font-weight: bold; }
+        .status-Pending { color: orange; }
 
-        /* REWARD POPUP */
-        #reward-pop {            position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            background: white; border: 4px solid var(--green); padding: 30px; border-radius: 20px;
-            z-index: 10000; display: none; text-align: center; box-shadow: 0 0 50px rgba(0,0,0,0.5);
+        /* Popups */
+        #reward-pop { 
+            position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+            background: white; border: 5px solid var(--green); padding: 25px; border-radius: 20px;            z-index: 10000; display: none; text-align: center; color: black; box-shadow: 0 0 50px rgba(0,0,0,0.5);
         }
 
         .hidden { display: none; }
         .pagination { display: flex; justify-content: center; gap: 10px; margin-top: 10px; }
-        .p-btn { width: auto; padding: 5px 15px; background: #333; }
-        .user-link { color: #0088cc; text-decoration: underline; cursor: pointer; }
+        .page-btn { width: auto; padding: 5px 15px; background: #333; font-size: 11px; }
+        .user-tag { color: var(--blue); text-decoration: underline; cursor: pointer; font-weight: bold; }
 
-        .footer { position: fixed; bottom: 0; left: 0; width: 100%; background: #000; padding: 10px 0; font-size: 10px; color: #777; text-align: center; z-index: 1000; }
+        .footer { position: fixed; bottom: 0; left: 0; width: 100%; background: #000; padding: 10px 0; font-size: 10px; color: #777; text-align: center; }
     </style>
 </head>
-<body onclick="document.body.classList.add('clicked')">
+<body onclick="document.body.classList.add('active-bg')">
 
 <div id="reward-pop">
-    <h1 style="color:var(--green)">BIG WIN!</h1>
-    <h2 id="reward-amt">₱0.00</h2>
-    <p>Added to your wallet successfully!</p>
-    <button onclick="closeReward()">COLLECT</button>
+    <h1 style="margin:0">💰 REWARD!</h1>
+    <h2 id="reward-val">₱0.00</h2>
+    <p>Added to your balance instantly.</p>
+    <button onclick="document.getElementById('reward-pop').style.display='none'">GREAT!</button>
 </div>
 
-<div class="header">
-    <div id="userBar">👤 Loading...</div>
-    <div class="balance-main">₱<span id="topBalance">0.000</span></div>
+<div class="header" style="text-align: center; padding: 10px;">
+    <div id="userBar">👤 @loading...</div>
+    <div style="font-size: 2.2rem; font-weight: bold; color: var(--green);">₱<span id="topBalance">0.000</span></div>
 </div>
 
 <div id="page-main">
     <button onclick="navTo('page-profile')">👤 MY PROFILE</button>
     <button onclick="navTo('page-online')">🌐 ONLINE USERS</button>
-    <button class="rainbow-btn" onclick="navTo('page-signin')">🍍 SIGN IN (₱0.02)</button>
+    <button class="rainbow-btn" onclick="navTo('page-signin')">🍍 SIGN IN AREA (₱0.02)</button>
     <button class="rainbow-btn" onclick="navTo('page-ads')">🍍 ADS AREA (₱0.02)</button>
     <button class="rainbow-btn" onclick="navTo('page-gift')">🍍 GIFT AREA (₱0.02)</button>
     <button class="rainbow-btn" onclick="navTo('page-bonus')">🍍 BONUS AREA (₱0.015)</button>
     <button onclick="navTo('page-chat')">💬 LIVE CHAT</button>
-    <button onclick="navTo('page-ref')">👥 REFERRALS</button>
-    <button onclick="navTo('page-withdraw')">💰 WITHDRAWAL</button>
-    <button style="background:transparent; color:#999; font-size:8px" onclick="openAdmin()">OWNER</button>
+    <button onclick="navTo('page-leader')">🏆 LEADERBOARD</button>
+    <button onclick="navTo('page-ref')">👥 REFERRAL SYSTEM</button>
+    <button onclick="navTo('page-help')">❓ HELP & SOCIALS</button>
+    <button style="background:#e74c3c" onclick="navTo('page-withdraw')">💰 WITHDRAWAL AREA</button>
+    <button style="background:transparent; color:#555; font-size:8px; border:none" onclick="openAdmin()">OWNER</button>
 </div>
 
 <!-- PROFILE PAGE -->
-<div id="page-profile" class="hidden">
-    <button onclick="navTo('page-main')">⬅ Back</button>
-    <div class="card" id="profile-content">
-        <h2 id="prof-name">@username</h2>        <div style="text-align:left; line-height: 1.8;">
-            <b>Daily Ads:</b> <span id="ads-d">0</span> / Reset in <span id="reset-d">--</span><br>
-            <b>Weekly Ads:</b> <span id="ads-w">0</span> / Reset in <span id="reset-w">--</span><br>
-            <b>All-Time Ads:</b> <span id="ads-t">0</span><br>
-            <b>Joined:</b> <span id="prof-date">--</span>
-        </div>
-        <div id="msg-action" class="hidden">
-            <button onclick="startPrivateChat()">✉ Send Message</button>
-        </div>
+<div id="page-profile" class="hidden">    <button onclick="navTo('page-main')">⬅ Back</button>
+    <div class="card" id="profile-card">
+        <h2 id="prof-user">@username</h2>
+        <div id="msg-icon" class="hidden" style="font-size: 24px; cursor: pointer;" onclick="openPrivateChat()">📩 Send Message</div>
+        <hr>
+        <p><b>Ads Today:</b> <span id="ads-day">0</span></p>
+        <p><b>Ads This Week:</b> <span id="ads-week">0</span></p>
+        <p><b>All-Time Ads:</b> <span id="ads-total">0</span></p>
     </div>
 </div>
 
@@ -104,44 +98,77 @@
 <div id="page-online" class="hidden">
     <button onclick="navTo('page-main')">⬅ Back</button>
     <div class="card">
-        <h3>Online Users</h3>
-        <table id="onlineTable"><thead><tr><th>User</th><th>Last Active</th></tr></thead><tbody id="onlineBody"></tbody></table>
+        <h3>Online Now</h3>
+        <table id="onlineTable"><thead><tr><th>Username</th><th>Status</th></tr></thead><tbody id="onlineBody"></tbody></table>
     </div>
 </div>
 
-<!-- WITHDRAWAL PAGE -->
+<!-- LEADERBOARD -->
+<div id="page-leader" class="hidden">
+    <button onclick="navTo('page-main')">⬅ Back</button>
+    <div class="card">
+        <h3>Weekly Top Earners</h3>
+        <table id="leaderTable"><thead><tr><th>Rank</th><th>User</th><th>Earned</th></tr></thead><tbody id="leaderBody"></tbody></table>
+        <div class="pagination"><button class="page-btn" onclick="changeP('leader', -1)">Prev</button><span id="leaderPage">1</span><button class="page-btn" onclick="changeP('leader', 1)">Next</button></div>
+    </div>
+</div>
+
+<!-- REFERRAL -->
+<div id="page-ref" class="hidden">
+    <button onclick="navTo('page-main')">⬅ Back</button>
+    <div class="card">
+        <h3>Referral Center</h3>
+        <p>Enter a Telegram @Username as your code:</p>
+        <input type="text" id="refCodeInput" placeholder="@username" style="width:80%; padding:10px; margin-bottom:10px; border-radius:5px;">
+        <button onclick="linkReferrer()">Link Referrer</button>
+        <hr>
+        <p>Claimable Bonus: <b style="color:var(--green)">₱<span id="refBonusAmt">0.00</span></b></p>
+        <button onclick="claimReferral()">Claim Rewards</button>
+    </div>
+</div>
+
+<!-- WITHDRAWAL -->
 <div id="page-withdraw" class="hidden">
     <button onclick="navTo('page-main')">⬅ Back</button>
     <div class="card">
-        <div style="font-size:24px; color:var(--green)">₱<span id="earnBox">0.000</span></div>
-        <input type="text" id="payoutInfo" placeholder="GCash No / FaucetPay Email">
-        <button onclick="withdraw('GCash')">Withdraw GCash (PHP)</button>
-        <button style="background:#0088cc" onclick="withdraw('FaucetPay')">Withdraw FaucetPay (USDT)</button>
+        <h3>Withdraw Funds</h3>
+        <div style="font-size:24px; color:var(--green); font-weight:bold; margin:10px 0;">₱<span id="drawBalance">0.000</span></div>
+        <input type="text" id="drawInfo" placeholder="GCash No / FaucetPay Email" style="width:80%; padding:10px; margin-bottom:10px;">
+        <button onclick="requestPayout('GCash')">GCash (PHP)</button>
+        <button style="background:var(--blue)" onclick="requestPayout('FaucetPay')">FaucetPay (USDT)</button>
     </div>
-    <h4>WithdrawalHistory</h4>
-    <table id="histTable"><thead><tr><th>Amount</th><th>Method</th><th>Status</th></tr></thead><tbody id="histBody"></tbody></table>
-    <div class="pagination"><button class="p-btn" onclick="changeP('hist', -1)">Prev</button><span id="histPage">1</span><button class="p-btn" onclick="changeP('hist', 1)">Next</button></div>
+    <h4>Withdrawal History</h4>
+    <table id="histTable"><thead><tr><th>Date</th><th>Method</th><th>Amount</th><th>Status</th></tr></thead><tbody id="histBody"></tbody></table>
+    <div class="pagination"><button class="page-btn" onclick="changeP('hist', -1)">Prev</button><span id="histPage">1</span><button class="page-btn" onclick="changeP('hist', 1)">Next</button></div>
 </div>
 
-<!-- ADMIN PAGE -->
+<!-- ADMIN -->
 <div id="page-admin" class="hidden">
-    <button onclick="navTo('page-main')">Exit</button>
-    <h3>Withdrawal Requests</h3>
-    <table style="font-size:8px"><thead><tr><th>User</th><th>Amt</th><th>Info</th><th>Action</th></tr></thead><tbody id="adminBody"></tbody></table>
-    <div class="pagination"><button class="p-btn" onclick="changeP('admin', -1)">Prev</button><span id="adminPage">1</span><button class="p-btn" onclick="changeP('admin', 1)">Next</button></div>
+    <button onclick="navTo('page-main')">Exit Admin</button>
+    <h3>Owner Dashboard</h3>
+    <table style="font-size:9px"><thead><tr><th>User</th><th>Method</th><th>Info</th><th>Amt</th><th>Action</th></tr></thead><tbody id="adminBody"></tbody></table>
+    <div class="pagination"><button class="page-btn" onclick="changeP('admin', -1)">Prev</button><span id="adminPage">1</span><button class="page-btn" onclick="changeP('admin', 1)">Next</button></div>
 </div>
 
-<!-- DYNAMIC TASK AREAS -->
-<div id="page-signin" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="cont-signin"></div></div>
-<div id="page-ads" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="cont-ads"></div></div>
-<div id="page-gift" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="cont-gift"></div></div>
-<div id="page-bonus" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="cont-bonus"></div></div>
-<div id="page-chat" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div class="card"><div id="chat-box" style="height:250px; overflow-y:auto; text-align:left; background:#000; padding:10px; font-size:12px; margin-bottom:10px; border:1px solid #333"></div><input type="text" id="chatInput" placeholder="Message..."><button onclick="sendMessage()">Send</button></div></div>
-<div id="page-ref" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div class="card"><h3>Referral</h3><input type="text" id="manualRef" placeholder="Enter @username"><button onclick="submitRef()">Link Referrer</button><p>Claimable: ₱<span id="refBonus">0.00</span></p><button onclick="claimRef()">Claim</button></div></div>
+<!-- TASKS AREAS -->
+<div id="page-signin" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="area-signin"></div></div>
+<div id="page-ads" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="area-ads"></div></div>
+<div id="page-gift" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="area-gift"></div></div>
+<div id="page-bonus" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div id="area-bonus"></div></div>
+<div id="page-chat" class="hidden"><button onclick="navTo('page-main')">⬅ Back</button><div class="card"><div id="chatBox" style="height:300px; overflow-y:auto; text-align:left; background:#000; padding:10px; font-size:12px; margin-bottom:10px; color:white;"></div><input type="text" id="chatInput" placeholder="Message..." style="width:70%; padding:10px;"><button style="width:25%" onclick="sendMsg()">Send</button></div></div>
 
-<div class="footer">
-    <div id="footerClock">00:00:00</div>
-    <b>PAPERHOUSE INC</b> | Reliable Earning
+<div id="page-help" class="hidden">
+    <button onclick="navTo('page-main')">⬅ Back</button>
+    <div class="card">
+        <h3>Support & Links</h3>
+        <button onclick="tgOpen('https://t.me/paperhouseinc')">Telegram Group</button>
+        <button onclick="tgOpen('https://facebook.com/groups/1193693469083843/')">Facebook Group</button>
+        <button onclick="tgOpen('https://www.facebook.com/profile.php?id=61586281245735')">Facebook Page</button>
+    </div>
+</div>
+
+<div class="footer"><div id="clock">00:00:00</div>
+    <b>PAPERHOUSE INC</b> | Reliable Earning 2026
 </div>
 
 <script type="module" src="app.js"></script>
